Fixed responsiveness for the main banner Created responsive behavior for footer Added 'Back to top' button with functionality in the footer Applied fixes on the main navigation mobile click behavior

--- a/src/main/webapp/resources/styles/style.css
+++ b/src/main/webapp/resources/styles/style.css
@@ -109,6 +109,10 @@ body {
     text-transform: uppercase;
 }
 
+.button--mid {
+    padding: 12px 36px;
+}
+
 .button--blue,
 .btn-blue {
     background-color: #29bb9c;
@@ -127,6 +131,14 @@ body {
 .button--pink:hover,
 .btn-pink:hover {
     background-color: #b97373;
+}
+
+.button--transparent {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.button--transparent:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .btn-pink,
@@ -203,11 +215,11 @@ body {
 }
 
 .mainNav li.active,
-.mainNav li:hover {
+.mainNav li:hover:not(:active) {
     background: #fdf4f4;
 }
 
-.mainNav li:hover:before,
+.mainNav li:hover:not(:active):before,
 .mainNav li.active:before {
     content: '';
     display: inline-block;
@@ -452,75 +464,38 @@ body {
     font-weight: bold;
 }
 
-@media screen and (min-width: 480px) {
-    .tabSwitcher__menuItem span {
-        display: inline;
-    }
-    .tabSwitcher__item h3 {
-        display: none;
-    }
-    .header {
-        height: 580px;
-        background-position: left -110px top -90px;
-        background-size: 120%;
-    }
-    .headerText {
-        padding-top: 17vw;
-        width: 100%;
-    }
-    .headerText h1 {
-        margin-bottom: 0;
-        font-size: 48px;
-    }
-    .headerText h2 {
-        display: block;
-    }
-    .headerText .button--big {
-        padding: 14px 38px;
-    }
-    .textContentSection {
-        padding: 80px 0;
-    }
-}
-
-@media screen and (min-width: 640px) {}
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 960px) {
-    .wrapperBackground--nanny {
-        background-image: url(../images/bg-section-nanny.jpg);
-    }
-    .wrapperBackground--parents {
-        background-image: url(../images/bg-section-parents.jpg);
-    }
-    .textContentSection .tabSwitcher {
-        margin-left: 0;
-        text-align: left;
-    }
-    .tabSwitcher__menuItem .fa {
-        float: left;
-        display: inline-block;
-        margin-right: 10px;
-    }
-}
-
 .footer {
     width: 100%;
     background-image: url(../images/background-plain.jpg);
     background-repeat: no-repeat;
-    background-position: center top -130px;
-    background-size: 135%;
+    background-size: cover;
+    text-align: center;
+    overflow: hidden;
+}
+
+.footer__menu {
+    width: auto;
+    overflow: hidden;
+}
+
+.footer__side {
+    width: 100%;
+    padding-top: 40px;
+    text-align: right;
+}
+
+.footer__side button {
+    width: 100%;
 }
 
 .footer__column {
-    float: left;
-    width: 25%;
+    width: 100%;
     max-width: 240px;
+    margin: 0 auto;
 }
 
 .footer__column h3 {
-    margin: 40px 0 18px;
+    margin: 40px 0 12px;
     font-size: 16px;
     color: #fff;
 }
@@ -530,7 +505,9 @@ body {
     display: block;
     height: 3px;
     width: 40px;
-    margin-bottom: 26px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 22px;
     background: #c87d7d;
     border-radius: 1px;
 }
@@ -557,8 +534,97 @@ body {
 .footer__copyright {
     width: 100%;
     margin-top: 20px;
-    padding: 28px 0;
+    padding: 26px 0;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+@media screen and (min-width: 480px) {
+    .tabSwitcher__menuItem span {
+        display: inline;
+    }
+    .tabSwitcher__item h3 {
+        display: none;
+    }
+    .header {
+        height: 500px;
+        background-position: left 44% top 23%;
+        background-size: 174%;
+    }
+    .headerText {
+        padding-top: 120px;
+        width: 100%;
+    }
+    .headerText h1 {
+        margin-bottom: 0;
+        font-size: 40px;
+    }
+    .headerText h2 {
+        display: block;
+    }
+    .headerText .button--big {
+        padding: 14px 38px;
+    }
+    .textContentSection {
+        padding: 80px 0;
+    }
+}
+
+@media screen and (min-width: 680px) {
+    .header {
+        background-position-x: 71%;
+        background-size: 122%;
+    }
+    .headerText {
+        padding-top: 140px;
+    }
+    .headerText h1 {
+        font-size: 48px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer {
+        background-position: center top -130px;
+        background-size: 135%;
+        text-align: left;
+    }
+
+    .footer__side {
+        float: right;
+        width: 170px;
+    }
+
+    .footer__side button {
+        width: auto;
+    }
+    
+    .footer__column {
+        float: left;
+        width: 33.33%;
+        margin: 0;
+    }
+    
+    .footer__column h3:before {
+        margin-left: 0;
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .wrapperBackground--nanny {
+        background-image: url(../images/bg-section-nanny.jpg);
+    }
+    .wrapperBackground--parents {
+        background-image: url(../images/bg-section-parents.jpg);
+    }
+    .textContentSection .tabSwitcher {
+        margin-left: 0;
+        text-align: left;
+    }
+    .tabSwitcher__menuItem .fa {
+        float: left;
+        display: inline-block;
+        margin-right: 10px;
+    }
 }
 
 @media screen and (min-width: 1024px) {}
